syntax = "proto3";

package services;

import "src/proto/company.proto";

option java_multiple_files = true;
option java_package = "com.parabola.web.services";
option java_outer_classname = "ProjectServiceProtos";


service ProjectService {

  rpc GetAllCompanies(GetAllCompaniesRequest) returns (GetAllCompaniesResponse);
  rpc AddCompanyToProject(AddCompanyToProjectRequest) returns (AddCompanyToProjectResponse);
  rpc GetAllCompaniesInProject(GetAllCompaniesInProjectRequest) returns (GetAllCompaniesInProjectResponse);
  rpc CreateObjectInProject(CreateObjectRequest) returns (CreateObjectResponse);
  rpc RemoveCompanyInProject(RemoveCompanyInProjectRequest) returns (RemoveCompanyInProjectResponse);
}

message GetAllCompaniesRequest {}

message GetAllCompaniesResponse {
  repeated Company companies = 1;
}

message AddCompanyToProjectRequest {
  Company company = 1;
  int32 project_id = 2;
}

message AddCompanyToProjectResponse {}

message GetAllCompaniesInProjectRequest {
  int32 project_id = 1;
}

message GetAllCompaniesInProjectResponse {
  repeated Company companies = 1;
}

message CreateObjectRequest {
  int32 project_id = 1;
  string object_name = 2;
  // The company/user that creates the object
  string username = 3;
}

message CreateObjectResponse {
  int32 object_id = 1;
}

message RemoveCompanyInProjectRequest {
  int32 project_id = 1;
  Company company = 2;
}

message RemoveCompanyInProjectResponse {}